--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 *.pyc
 base_model_mesa/rich_model/__pycache__/agents.cpython-38.pyc
 *.pyc
-base_model_mesa/Model Outputs/tri-500-20000-5-0-1.csv
+*.csv
